[gd_scene load_steps=6 format=3 uid="uid://b4k2xil3ygbaq"]

[ext_resource type="Script" path="res://ui/debug/debug_settings.gd" id="1_settings"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_2"]
content_margin_left = 20.0
content_margin_top = 10.0
content_margin_right = 20.0
content_margin_bottom = 10.0
bg_color = Color(0.15, 0.15, 0.15, 1)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(0.3, 0.3, 0.3, 1)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_4"]
bg_color = Color(0.25, 0.25, 0.25, 1)
border_width_bottom = 4
border_color = Color(1, 0.8, 0, 1)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_5"]
bg_color = Color(0.15, 0.15, 0.15, 1)
border_width_bottom = 4
border_color = Color(0.8, 0.6, 0, 1)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_3"]
bg_color = Color(0.2, 0.2, 0.2, 1)
border_width_bottom = 4
border_color = Color(0.3, 0.3, 0.3, 1)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[node name="SettingsScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_settings")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.1, 0.1, 0.1, 1)

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 40
theme_override_constants/margin_top = 40
theme_override_constants/margin_right = 40
theme_override_constants/margin_bottom = 40

[node name="ScrollContainer" type="ScrollContainer" parent="MarginContainer"]
layout_mode = 2
horizontal_scroll_mode = 0

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 20

[node name="Title" type="Label" parent="MarginContainer/ScrollContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.8, 0, 1)
theme_override_font_sizes/font_size = 32
text = "Debug Settings"

[node name="HSeparator" type="HSeparator" parent="MarginContainer/ScrollContainer/VBoxContainer"]
layout_mode = 2

[node name="LogLevelSection" type="PanelContainer" parent="MarginContainer/ScrollContainer/VBoxContainer"]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_2")

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/ScrollContainer/VBoxContainer/LogLevelSection"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="SectionTitle" type="Label" parent="MarginContainer/ScrollContainer/VBoxContainer/LogLevelSection/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Log Level"

[node name="LogLevelOption" type="OptionButton" parent="MarginContainer/ScrollContainer/VBoxContainer/LogLevelSection/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 16
theme_override_styles/hover = SubResource("StyleBoxFlat_4")
theme_override_styles/pressed = SubResource("StyleBoxFlat_5")
theme_override_styles/normal = SubResource("StyleBoxFlat_3")

[node name="ContextSection" type="PanelContainer" parent="MarginContainer/ScrollContainer/VBoxContainer"]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_2")

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/ScrollContainer/VBoxContainer/ContextSection"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="SectionTitle" type="Label" parent="MarginContainer/ScrollContainer/VBoxContainer/ContextSection/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Context Display"

[node name="ShowContextCheck" type="CheckBox" parent="MarginContainer/ScrollContainer/VBoxContainer/ContextSection/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 16
text = "Show Context in Logs"

[node name="CategoriesSection" type="PanelContainer" parent="MarginContainer/ScrollContainer/VBoxContainer"]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_2")

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/ScrollContainer/VBoxContainer/CategoriesSection"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="SectionTitle" type="Label" parent="MarginContainer/ScrollContainer/VBoxContainer/CategoriesSection/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Log Categories"

[node name="CategoryGrid" type="GridContainer" parent="MarginContainer/ScrollContainer/VBoxContainer/CategoriesSection/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_constants/h_separation = 20
theme_override_constants/v_separation = 10
columns = 2

[node name="ButtonContainer" type="HBoxContainer" parent="MarginContainer/ScrollContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 20
alignment = 2

[node name="BackButton" type="Button" parent="MarginContainer/ScrollContainer/VBoxContainer/ButtonContainer"]
custom_minimum_size = Vector2(120, 40)
layout_mode = 2
theme_override_font_sizes/font_size = 16
theme_override_styles/hover = SubResource("StyleBoxFlat_4")
theme_override_styles/pressed = SubResource("StyleBoxFlat_5")
theme_override_styles/normal = SubResource("StyleBoxFlat_3")
text = "Back"
